deploy-monitoring/bases/jaeger-tracing/virtualservice.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: jaeger
spec:
  hosts:
  - "*"
  gateways:
  - jaeger-tracing-gateway
  http:
  - match:
    - uri:
        prefix: /jaeger
    route:
    - destination:
        host: jaeger-query
        port:
          number: 16686
